--- a/styles/styles.css
+++ b/styles/styles.css
@@ -611,7 +611,7 @@ padding: 0 1.5rem 0.3rem 1.5rem;
 .festivals-page .hero {
   background:
     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)),
-    url('public/images/mixs.png') center/cover no-repeat;
+    url("public/images/mixs.png") center/cover no-repeat;
 }
 
 footer {
