--- a/styles/styles.css
+++ b/styles/styles.css
@@ -164,9 +164,7 @@ nav {
 }
 
 .hero {
- background: 
-    linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)), 
-    url('/public/images/bhavani.jpg') center/cover no-repeat;  color: #fff;
+
   text-align: center;
   padding: 7rem 1rem 6rem;
 }
@@ -608,11 +606,11 @@ padding: 0 1.5rem 0.3rem 1.5rem;
   color: #999;
   cursor: pointer;
 }
-/* .festivals-page .hero {
+.festivals-page .hero {
   background:
     linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.2)),
     url('/public/images/mixs.png') center/cover no-repeat;
-} */
+}
 
 footer {
   text-align: center;
